# khoca

./: .gitignore  Dockerfile  INSTALL  MANIFEST.in  Makefile  README  README.md  __init__.py  _version.py  analyse.sh  before-all.sh  before-build.sh  install-pari-msys2.sh  install-pari.sh  khoca.py  pyproject.toml  pytest.ini  setup.py  test-command.sh
.github/workflows/: build_wheels.yml  build_wheels_linux.yml  build_wheels_macos.yml  build_wheels_windows.yml  publish_pypi.yml  publish_source_pypi.yml  push_docker.yml  run_tests.yml  upload_pypi.yml
converters/: binToHuman.py  humanToBin.py  montesinos.py
data/: KhovanovMinus  KhovanovPlus  KrasnerMinus  KrasnerPlus
docker/: entrypoint.sh
src/: compilerFlagsInfo.cpp  shared.cpp  shared.h
src/krasner/: krasner.cpp  krasner.h  krasnerExplicitTemplates.cpp
src/planar_algebra/: coefficient_rings.cpp  coefficient_rings.h  coefficient_rings_explicitTemplates.cpp  explicitTemplates.cpp  planar_algebra.cpp  planar_algebra.h  smith.cpp  smith.h  sparsemat.cpp  sparsemat.h  sparsematExplicitTemplates.cpp
src/python_interface/: pui.pyx  pythonInterface.cpp  pythonInterface.h
tests/: test.py
