[build-system]
requires = [
    "cython",
    "setuptools",
    "setuptools_scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp3*"]
archs = ["auto64"]
before-all = "sh before-all.sh"
before-build = "sh before-build.sh"
test-requires = ["py", "pytest"]
test-command = "PWD=$(pwd) && cd {project} && sh test-command.sh && cd $PWD"
